Makes it easier to run the server

--- a/server/BackendServer.ipynb
+++ b/server/BackendServer.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "35d4cdae",
    "metadata": {},
    "outputs": [],
@@ -50,12 +50,13 @@
     "\n",
     "@app.route('/get_light_times')\n",
     "def get_light_times():\n",
+    "    # This is where the A.I. will go. For now, just return a random number\n",
     "    return str(random.randint(5, 90))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "98b2cca5",
    "metadata": {},
    "outputs": [
@@ -74,21 +75,7 @@
      "text": [
       "\u001b[31m\u001b[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\u001b[0m\n",
       " * Running on http://127.0.0.1:3000\n",
-      "\u001b[33mPress CTRL+C to quit\u001b[0m\n",
-      "127.0.0.1 - - [12/Jan/2023 17:46:39] \"GET /get_light_times HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [12/Jan/2023 17:46:41] \"GET /get_light_times HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [12/Jan/2023 17:46:41] \"GET /get_light_times HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [12/Jan/2023 17:46:41] \"GET /get_light_times HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [12/Jan/2023 17:46:42] \"GET /get_light_times HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [12/Jan/2023 17:46:42] \"GET /get_light_times HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [12/Jan/2023 17:46:42] \"GET /get_light_times HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [12/Jan/2023 17:46:42] \"GET /get_light_times HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [12/Jan/2023 17:46:43] \"GET /get_light_times HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [12/Jan/2023 17:46:43] \"GET /get_light_times HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [12/Jan/2023 17:46:43] \"GET /get_light_times HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [12/Jan/2023 17:46:43] \"GET /get_light_times HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [12/Jan/2023 17:46:43] \"GET /get_light_times HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [12/Jan/2023 17:46:43] \"GET /get_light_times HTTP/1.1\" 200 -\n"
+      "\u001b[33mPress CTRL+C to quit\u001b[0m\n"
      ]
     }
    ],
@@ -100,34 +87,17 @@
     "def start_server():\n",
     "    app.run(port=PORT)\n",
     "\n",
-    "server_thread = Process(target=start_server)\n",
-    "server_thread.start()\n",
-    "server_threads.append(server_thread)\n",
-    "print(\"Server running...\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "ff031c1c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Stopping server...\n",
-      "Server stopped!\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Stopping server...\")\n",
+    "# Kill any old servers\n",
     "for i in range(len(server_threads)):\n",
     "    server_threads[i].terminate()\n",
     "    server_threads[i].join()\n",
     "server_threads = []\n",
-    "print(\"Server stopped!\")"
+    "    \n",
+    "# Start a new server\n",
+    "server_thread = Process(target=start_server)\n",
+    "server_thread.start()\n",
+    "server_threads.append(server_thread)\n",
+    "print(\"Server running...\")"
    ]
   },
   {
