--- a/server/MacroscopicSimulation.ipynb
+++ b/server/MacroscopicSimulation.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "20b60bc7",
+   "id": "f2f8d21a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "c6a1e6f9",
+   "id": "80cc3dbe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,10 +34,12 @@
     "MAX_CAR_FLOW_RATE = 0.5\n",
     "\n",
     "def get_next_car(gamma):\n",
+    "    # Assume cars approach the intersection under an exponential distribution\n",
     "    return random.exponential(gamma, size=1)[0]\n",
     "\n",
     "class TrafficLight:\n",
     "    def __init__(self, x_rate, y_rate):\n",
+    "        # https://en.wikipedia.org/wiki/Exponential_distribution#Mean:~:text=1\n",
     "        self.x_rate_gamma = 1 / x_rate\n",
     "        self.y_rate_gamma = 1 / y_rate\n",
     "        self.x_timer = get_next_car(self.x_rate_gamma)\n",
@@ -94,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "314c6799",
+   "id": "18d488e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "9c342e4a",
+   "id": "cdbf4251",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7194ce0e",
+   "id": "54980561",
    "metadata": {},
    "outputs": [],
    "source": []
