--- a/server/BackendServer.ipynb
+++ b/server/BackendServer.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "35d4cdae",
    "metadata": {},
    "outputs": [],
@@ -54,26 +54,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "98b2cca5",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Server running...\n",
-      " * Serving Flask app '__main__'\n",
-      " * Debug mode: off\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[31m\u001b[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\u001b[0m\n",
-      " * Running on http://127.0.0.1:3000\n",
-      "\u001b[33mPress CTRL+C to quit\u001b[0m\n"
+     "ename": "NameError",
+     "evalue": "name 'server_threads' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [2]\u001b[0m, in \u001b[0;36m<cell line: 9>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m     app\u001b[38;5;241m.\u001b[39mrun(port\u001b[38;5;241m=\u001b[39mPORT)\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m# Kill any old servers\u001b[39;00m\n\u001b[0;32m----> 9\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[43mserver_threads\u001b[49m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m     10\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(server_threads)):\n\u001b[1;32m     11\u001b[0m         server_threads[i]\u001b[38;5;241m.\u001b[39mterminate()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'server_threads' is not defined"
      ]
     }
    ],
