--- a/server/BackendServer.ipynb
+++ b/server/BackendServer.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "35d4cdae",
    "metadata": {},
    "outputs": [],
@@ -45,28 +45,62 @@
     "def info():\n",
     "    return 'Welcome to the API for our traffic AI'\n",
     "\n",
-    "itera = 0\n",
     "@app.route('/get_light_times')\n",
     "def get_light_times():\n",
     "    # This is where the A.I. will go. For now, just return a random number\n",
-    "    return str(random.randint(5, 90))"
+    "    return str(30)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "98b2cca5",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'server_threads' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [2]\u001b[0m, in \u001b[0;36m<cell line: 9>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m     app\u001b[38;5;241m.\u001b[39mrun(port\u001b[38;5;241m=\u001b[39mPORT)\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m# Kill any old servers\u001b[39;00m\n\u001b[0;32m----> 9\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[43mserver_threads\u001b[49m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m     10\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(server_threads)):\n\u001b[1;32m     11\u001b[0m         server_threads[i]\u001b[38;5;241m.\u001b[39mterminate()\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'server_threads' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Server running...\n",
+      " * Serving Flask app '__main__'\n",
+      " * Debug mode: off\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[31m\u001b[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\u001b[0m\n",
+      " * Running on http://127.0.0.1:3000\n",
+      "\u001b[33mPress CTRL+C to quit\u001b[0m\n",
+      "127.0.0.1 - - [18/Jan/2023 16:22:04] \"GET /get_light_times HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [18/Jan/2023 16:22:04] \"GET /get_light_times HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [18/Jan/2023 16:22:04] \"GET /get_light_times HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [18/Jan/2023 16:22:04] \"GET /get_light_times HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [18/Jan/2023 16:22:04] \"GET /get_light_times HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [18/Jan/2023 16:22:04] \"GET /get_light_times HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [18/Jan/2023 16:22:04] \"GET /get_light_times HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [18/Jan/2023 16:22:04] \"GET /get_light_times HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [18/Jan/2023 16:22:04] \"GET /get_light_times HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [18/Jan/2023 16:22:04] \"GET /get_light_times HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [18/Jan/2023 16:22:04] \"GET /get_light_times HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [18/Jan/2023 16:22:04] \"GET /get_light_times HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [18/Jan/2023 16:22:04] \"GET /get_light_times HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [18/Jan/2023 16:22:04] \"GET /get_light_times HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [18/Jan/2023 16:22:04] \"GET /get_light_times HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [18/Jan/2023 16:22:04] \"GET /get_light_times HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [18/Jan/2023 16:22:04] \"GET /get_light_times HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [18/Jan/2023 16:22:04] \"GET /get_light_times HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [18/Jan/2023 16:22:04] \"GET /get_light_times HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [18/Jan/2023 16:22:04] \"GET /get_light_times HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [18/Jan/2023 16:22:04] \"GET /get_light_times HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [18/Jan/2023 16:22:04] \"GET /get_light_times HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [18/Jan/2023 16:22:04] \"GET /get_light_times HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [18/Jan/2023 16:22:04] \"GET /get_light_times HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [18/Jan/2023 16:22:04] \"GET /get_light_times HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [18/Jan/2023 16:22:04] \"GET /get_light_times HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [18/Jan/2023 16:22:04] \"GET /get_light_times HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [18/Jan/2023 16:22:04] \"GET /get_light_times HTTP/1.1\" 200 -\n"
      ]
     }
    ],
@@ -79,10 +113,12 @@
     "    app.run(port=PORT)\n",
     "\n",
     "# Kill any old servers\n",
-    "if not server_threads is None:\n",
+    "if 'server_threads' in locals():\n",
     "    for i in range(len(server_threads)):\n",
     "        server_threads[i].terminate()\n",
     "        server_threads[i].join()\n",
+    "else:\n",
+    "    server_threads = []\n",
     "    \n",
     "# Start a new server\n",
     "server_thread = Process(target=start_server)\n",
