--- a/simulation/ExampleUsage.ipynb
+++ b/simulation/ExampleUsage.ipynb
@@ -2,195 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "bfd07595",
+   "execution_count": 11,
+   "id": "1f9b9f88",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[3, 2, 9, 0, 1]\n",
-      "[3, 2, 4, 0, 1]\n",
-      "[1, 2, 3, 0, 1]\n",
-      "[4, 2, 4, 0, 1]\n",
-      "[4, 2, 4, 0, 1]\n",
-      "[1, 2, 3, 0, 1]\n",
-      "[1, 2, 2, 0, 1]\n",
-      "[5, 2, 4, 0, 1]\n",
-      "[4, 2, 1, 0, 1]\n",
-      "[3, 0, 7, 0, 1]\n",
-      "[1, 0, 2, 0, 1]\n",
-      "[1, 0, 2, 0, 1]\n",
-      "[3, 0, 1, 0, 1]\n",
-      "[3, 0, 2, 0, 1]\n",
-      "[3, 0, 3, 0, 1]\n",
-      "[2, 0, 1, 0, 1]\n",
-      "[1, 0, 1, 0, 1]\n",
-      "[8, 0, 2, 0, 1]\n",
-      "[2, 0, 4, 0, 1]\n",
-      "[2, 0, 2, 0, 1]\n",
-      "[4, 0, 2, 0, 1]\n",
-      "[3, 0, 5, 0, 1]\n",
-      "[3, 0, 1, 0, 1]\n",
-      "[3, 0, 1, 0, 1]\n",
-      "[3, 0, 3, 0, 1]\n",
-      "[4, 0, 2, 0, 1]\n",
-      "[11, 0, 3, 0, 1]\n",
-      "[1, 0, 10, 0, 1]\n",
-      "[1, 0, 2, 0, 1]\n",
-      "[1, 0, 1, 0, 1]\n",
-      "[3, 0, 2, 0, 1]\n",
-      "[2, 0, 4, 0, 1]\n",
-      "[1, 0, 1, 0, 1]\n",
-      "[2, 0, 2, 0, 1]\n",
-      "[5, 0, 3, 0, 1]\n",
-      "[7, 0, 1, 0, 1]\n",
-      "[3, 0, 10, 0, 1]\n",
-      "[1, 0, 2, 0, 1]\n",
-      "[2, 0, 2, 0, 1]\n",
-      "[2, 0, 3, 0, 1]\n",
-      "[2, 0, 1, 0, 1]\n",
-      "[3, 0, 2, 0, 1]\n",
-      "[2, 0, 1, 0, 1]\n",
-      "[2, 0, 1, 0, 1]\n",
-      "[7, 0, 1, 0, 1]\n",
-      "[1, 0, 4, 0, 1]\n",
-      "[2, 0, 3, 0, 1]\n",
-      "[4, 0, 2, 0, 1]\n",
-      "[3, 0, 1, 0, 1]\n",
-      "[2, 0, 1, 0, 1]\n",
-      "[1, 0, 1, 0, 1]\n",
-      "[2, 0, 1, 0, 1]\n",
-      "[1, 0, 2, 0, 1]\n",
-      "[8, 0, 1, 0, 1]\n",
-      "[2, 0, 10, 0, 1]\n",
-      "[1, 0, 1, 0, 1]\n",
-      "[1, 0, 2, 0, 1]\n",
-      "[2, 0, 2, 0, 1]\n",
-      "[1, 0, 1, 0, 1]\n",
-      "[2, 0, 2, 0, 1]\n",
-      "[1, 0, 2, 0, 1]\n",
-      "[2, 0, 1, 0, 1]\n",
-      "[7, 0, 1, 0, 1]\n",
-      "[2, 0, 5, 0, 1]\n",
-      "[2, 0, 4, 0, 1]\n",
-      "[4, 0, 4, 0, 1]\n",
-      "[3, 0, 3, 0, 1]\n",
-      "[1, 0, 2, 0, 1]\n",
-      "[2, 0, 2, 0, 1]\n",
-      "[4, 0, 6, 0, 1]\n",
-      "[3, 0, 5, 0, 1]\n",
-      "[6, 0, 5, 0, 1]\n",
-      "[2, 0, 7, 2, 1]\n",
-      "[2, 0, 2, 2, 1]\n",
-      "[4, 0, 2, 2, 1]\n",
-      "[2, 0, 2, 2, 1]\n",
-      "[4, 0, 4, 2, 1]\n",
-      "[1, 0, 5, 2, 1]\n",
-      "[2, 0, 3, 2, 1]\n",
-      "[3, 0, 4, 2, 1]\n",
-      "[9, 0, 1, 2, 1]\n",
-      "[0, 7, 2, 4, 0]\n",
-      "[0, 7, 0, 1, 0]\n",
-      "[0, 8, 0, 2, 0]\n",
-      "[0, 9, 0, 5, 0]\n",
-      "[0, 9, 0, 3, 0]\n",
-      "[0, 5, 0, 2, 0]\n",
-      "[0, 5, 0, 1, 0]\n",
-      "[0, 9, 0, 2, 0]\n",
-      "[2, 8, 0, 4, 0]\n",
-      "[0, 3, 2, 1, 0]\n",
-      "[0, 5, 0, 2, 0]\n",
-      "[0, 6, 0, 6, 0]\n",
-      "[0, 3, 0, 3, 0]\n",
-      "[0, 2, 0, 2, 0]\n",
-      "[0, 2, 0, 1, 0]\n",
-      "[0, 2, 0, 0, 0]\n",
-      "[0, 6, 0, 5, 0]\n",
-      "[2, 3, 0, 3, 0]\n",
-      "[0, 4, 2, 4, 0]\n",
-      "[0, 2, 0, 3, 0]\n",
-      "[0, 1, 0, 4, 0]\n",
-      "[0, 2, 0, 3, 0]\n",
-      "[0, 3, 0, 0, 0]\n",
-      "[0, 2, 0, 0, 0]\n",
-      "[0, 1, 0, 0, 0]\n",
-      "[0, 2, 0, 6, 0]\n",
-      "[2, 6, 0, 3, 0]\n",
-      "[0, 2, 2, 7, 0]\n",
-      "[0, 2, 0, 1, 0]\n",
-      "[0, 7, 0, 0, 0]\n",
-      "[0, 1, 0, 3, 0]\n",
-      "[0, 3, 0, 2, 0]\n",
-      "[0, 2, 0, 1, 0]\n",
-      "[0, 2, 0, 0, 0]\n",
-      "[0, 6, 0, 3, 0]\n",
-      "[2, 3, 0, 2, 0]\n",
-      "[0, 5, 2, 3, 0]\n",
-      "[0, 2, 0, 2, 0]\n",
-      "[0, 2, 0, 6, 0]\n",
-      "[0, 2, 0, 1, 0]\n",
-      "[0, 6, 0, 2, 0]\n",
-      "[0, 3, 0, 1, 0]\n",
-      "[0, 2, 0, 0, 0]\n",
-      "[0, 2, 0, 3, 0]\n",
-      "[2, 4, 0, 3, 0]\n",
-      "[0, 6, 2, 6, 0]\n",
-      "[0, 3, 0, 3, 0]\n",
-      "[0, 6, 0, 2, 0]\n",
-      "[0, 1, 0, 2, 0]\n",
-      "[0, 4, 0, 1, 0]\n",
-      "[0, 3, 0, 1, 0]\n",
-      "[0, 3, 0, 2, 0]\n",
-      "[0, 4, 0, 3, 0]\n",
-      "[2, 7, 0, 5, 0]\n",
-      "[0, 2, 2, 1, 0]\n",
-      "[0, 3, 0, 3, 0]\n",
-      "[0, 4, 0, 6, 0]\n",
-      "[0, 1, 0, 1, 0]\n",
-      "[0, 2, 0, 3, 0]\n",
-      "[0, 0, 0, 5, 0]\n",
-      "[0, 2, 0, 2, 0]\n",
-      "[0, 3, 0, 8, 0]\n",
-      "[2, 7, 0, 2, 0]\n",
-      "[0, 5, 2, 2, 0]\n",
-      "[0, 1, 0, 2, 0]\n",
-      "[0, 3, 0, 2, 0]\n",
-      "[0, 1, 0, 2, 0]\n",
-      "[0, 0, 0, 4, 0]\n",
-      "[0, 3, 0, 2, 0]\n",
-      "[0, 1, 0, 2, 0]\n",
-      "[0, 1, 0, 4, 0]\n",
-      "[2, 3, 0, 4, 0]\n",
-      "[0, 0, 2, 5, 0]\n",
-      "[0, 2, 0, 8, 0]\n",
-      "[0, 8, 0, 7, 0]\n",
-      "[0, 1, 0, 8, 0]\n",
-      "[0, 1, 0, 8, 0]\n",
-      "[0, 1, 0, 6, 0]\n",
-      "[0, 3, 0, 9, 0]\n",
-      "[0, 4, 0, 8, 0]\n",
-      "[2, 0, 0, 7, 0]\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [10]\u001b[0m, in \u001b[0;36m<cell line: 14>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m NORTH_SOUTH_GREEN, \u001b[38;5;241m30\u001b[39m\n\u001b[1;32m     13\u001b[0m sim \u001b[38;5;241m=\u001b[39m TrafficSimulation(my_ai, grid_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m9\u001b[39m, lane_length\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10\u001b[39m, max_speed\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m5\u001b[39m, in_rate\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.2\u001b[39m, initial_density\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.1\u001b[39m)\n\u001b[0;32m---> 14\u001b[0m car_waiting_ticks \u001b[38;5;241m=\u001b[39m \u001b[43msim\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun_simulation\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m100\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTotal Waiting Cars \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcar_waiting_ticks\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[0;32m~/Traffic/TrafficLightAI/simulation/simulation.py:668\u001b[0m, in \u001b[0;36mTrafficSimulation.run_simulation\u001b[0;34m(self, ticks)\u001b[0m\n\u001b[1;32m    666\u001b[0m total_cars_stopped \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m    667\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(ticks):\n\u001b[0;32m--> 668\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgrid\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtick\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    669\u001b[0m     total_cars_stopped \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgrid\u001b[38;5;241m.\u001b[39mget_current_cars_stopped()\n\u001b[1;32m    671\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m total_cars_stopped\n",
-      "File \u001b[0;32m~/Traffic/TrafficLightAI/simulation/simulation.py:611\u001b[0m, in \u001b[0;36mGrid.tick\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    609\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mx_grid):\n\u001b[1;32m    610\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m y \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39my_grid):\n\u001b[0;32m--> 611\u001b[0m         \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgrid\u001b[49m\u001b[43m[\u001b[49m\u001b[43mx\u001b[49m\u001b[43m,\u001b[49m\u001b[43my\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtick_in\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    613\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mx_grid):\n\u001b[1;32m    614\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m y \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39my_grid):\n",
-      "File \u001b[0;32m~/Traffic/TrafficLightAI/simulation/simulation.py:399\u001b[0m, in \u001b[0;36mIntersection.tick_in\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    397\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m4\u001b[39m):\n\u001b[1;32m    398\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39minlets[i] \u001b[38;5;241m!=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m--> 399\u001b[0m         new_cars \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minlets\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtick\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mi\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    400\u001b[0m         \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(new_cars)):\n\u001b[1;32m    401\u001b[0m             \u001b[38;5;66;03m# Figure out which way they car will go\u001b[39;00m\n\u001b[1;32m    402\u001b[0m             LEFT_CHANCE \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.33\u001b[39m\n",
-      "File \u001b[0;32m~/Traffic/TrafficLightAI/simulation/simulation.py:243\u001b[0m, in \u001b[0;36mLaneInlet.tick\u001b[0;34m(self, intersection, inlet_index)\u001b[0m\n\u001b[1;32m    240\u001b[0m output_segment \u001b[38;5;241m=\u001b[39m intersection\u001b[38;5;241m.\u001b[39mget_waiting_array(inlet_index)\n\u001b[1;32m    241\u001b[0m stopped_cars \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msum\u001b[39m(output_segment \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m)\n\u001b[0;32m--> 243\u001b[0m _, new_output, leaving_cars \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlane\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtick\u001b[49m\u001b[43m(\u001b[49m\u001b[43moutput_segment\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43moutput_segment\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    245\u001b[0m new_cars \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m    246\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(stopped_cars, \u001b[38;5;28mlen\u001b[39m(output_segment)):\n",
-      "File \u001b[0;32m~/Traffic/TrafficLightAI/simulation/simulation.py:187\u001b[0m, in \u001b[0;36mLane.tick\u001b[0;34m(self, input_segment, output_segment)\u001b[0m\n\u001b[1;32m    186\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mtick\u001b[39m(\u001b[38;5;28mself\u001b[39m, input_segment\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, output_segment\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[0;32m--> 187\u001b[0m     new_input, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39marray, new_output, leaving_cars \u001b[38;5;241m=\u001b[39m \u001b[43mupdate_lane\u001b[49m\u001b[43m(\u001b[49m\u001b[43minput_segment\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43marray\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moutput_segment\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmax_speed\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmax_speed\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    188\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m new_input, new_output, leaving_cars\n",
-      "File \u001b[0;32m~/Traffic/TrafficLightAI/simulation/simulation.py:95\u001b[0m, in \u001b[0;36mupdate_lane\u001b[0;34m(input_segment, lane, output_segment, max_speed)\u001b[0m\n\u001b[1;32m     92\u001b[0m \u001b[38;5;66;03m# Keep track of what cars leave off the end\u001b[39;00m\n\u001b[1;32m     93\u001b[0m leaving_cars \u001b[38;5;241m=\u001b[39m [] \u001b[38;5;66;03m# [(speed, distance)]\u001b[39;00m\n\u001b[0;32m---> 95\u001b[0m new_street \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m-\u001b[39m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mones\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtotal_length\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbyte\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     96\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(total_length):\n\u001b[1;32m     97\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m full_lane[i] \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m     98\u001b[0m         \u001b[38;5;66;03m# Found car\u001b[39;00m\n",
-      "File \u001b[0;32m/usr/local/lib/python3.8/dist-packages/numpy/core/numeric.py:205\u001b[0m, in \u001b[0;36mones\u001b[0;34m(shape, dtype, order, like)\u001b[0m\n\u001b[1;32m    202\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m _ones_with_like(shape, dtype\u001b[38;5;241m=\u001b[39mdtype, order\u001b[38;5;241m=\u001b[39morder, like\u001b[38;5;241m=\u001b[39mlike)\n\u001b[1;32m    204\u001b[0m a \u001b[38;5;241m=\u001b[39m empty(shape, dtype, order)\n\u001b[0;32m--> 205\u001b[0m \u001b[43mmultiarray\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcopyto\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcasting\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43munsafe\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m    206\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m a\n",
-      "File \u001b[0;32m<__array_function__ internals>:2\u001b[0m, in \u001b[0;36mcopyto\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "Total Waiting Cars 18615\n"
      ]
     }
    ],
@@ -202,7 +22,6 @@
     "\n",
     "# Inputs: [North waiting, East waiting, South waiting, West Waiting, Previous Light]\n",
     "def my_ai(inputs):\n",
-    "    print(inputs)\n",
     "    if inputs[-1] == NORTH_SOUTH_GREEN:\n",
     "        return EAST_WEST_GREEN, 30\n",
     "    if inputs[-1] == EAST_WEST_GREEN:\n",
@@ -216,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58ec34e4",
+   "id": "8b1761f5",
    "metadata": {},
    "outputs": [],
    "source": []
