Adds seeding to simulation

--- a/experiments/CellularAutomataTraffic4.ipynb
+++ b/experiments/CellularAutomataTraffic4.ipynb
@@ -372,6 +372,38 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c5a81e56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class OneWayRoad:\n",
+    "    def __init__(self, num_lanes, cell_count, max_speed, start_x=0, start_y=0, end_x=0, end_y=0):\n",
+    "        self.num_lanes = num_lanes\n",
+    "        self.lanes = []\n",
+    "        \n",
+    "        for i in range(num_lanes):\n",
+    "            self.lanes.append(Lane(cell_count, max_speed, start_x=start_x, start_y=start_y, end_x=end_x, end_y=end_y))\n",
+    "       \n",
+    "    def draw(self):\n",
+    "        for i in range(self.num_lanes):\n",
+    "            print(self.lanes[i].get_string())\n",
+    "    \n",
+    "    def tick(self):\n",
+    "        for i in range(self.num_lanes):\n",
+    "            self.lanes[i].tick()\n",
+    "    \n",
+    "owr = OneWayRoad(2, 50, 5)\n",
+    "owr.lanes[0].array[5] = 2\n",
+    "owr.lanes[1].array[12] = 2\n",
+    "owr.draw()\n",
+    "owr.tick()\n",
+    "print(\"\")\n",
+    "owr.draw()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "bdfc2577",
    "metadata": {},
    "outputs": [],
@@ -427,8 +459,8 @@
     "        self.lane = lane\n",
     "        \n",
     "    # Returns the cars that enter the intersection\n",
-    "    def tick(self, intersection, inlet_index):\n",
-    "        output_segment = intersection.get_waiting_array(inlet_index)\n",
+    "    def tick(self, intersection, inlet_index, j=0):\n",
+    "        output_segment = intersection.get_waiting_array(inlet_index, j)\n",
     "        stopped_cars = sum(output_segment == 0)\n",
     "            \n",
     "        _, new_output, leaving_cars = self.lane.tick(output_segment=output_segment)\n",
@@ -531,6 +563,100 @@
     "        else:\n",
     "            return cars_leaving[:-(cars_leaving_count - leaving)]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d40c9394",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "NORTH_SOUTH_GREEN = 0\n",
+    "EAST_WEST_GREEN = 1\n",
+    "\n",
+    "class BigIntersection():\n",
+    "    def __init__(self):\n",
+    "        self.inlets = [[],[],[],[]]\n",
+    "        self.outlets = [[],[],[],[]]\n",
+    "        self.waiting = [[],[],[],[]]\n",
+    "        self.leaving = [[],[],[],[]]\n",
+    "        self.light_state = EAST_WEST_GREEN\n",
+    "        \n",
+    "    def set_inlet(self, index, inlet):\n",
+    "        self.inlets[index].append(inlet)\n",
+    "        \n",
+    "    def set_outlet(self, index, outlet):\n",
+    "        self.outlets[index].append(outlet)\n",
+    "        \n",
+    "        self.waiting[index].append(None)\n",
+    "        self.leaving[index].append(None)\n",
+    "        \n",
+    "    # Returns the array of cars waiting\n",
+    "    # 2 cars waiting => [-1, -1, -1, ... -1, 0, 0]\n",
+    "    def get_waiting_array(self, index, j, length=1):\n",
+    "        waiting_array = -np.ones(length, dtype=np.byte)\n",
+    "        cars_waiting = 0 if self.waiting[index][j] is None else 1\n",
+    "        if (self.light_state == EAST_WEST_GREEN and (index == NORTH_INDEX or index == SOUTH_INDEX)) or (self.light_state == NORTH_SOUTH_GREEN and (index == EAST_INDEX or index == WEST_INDEX)):\n",
+    "            waiting_array[0] = 0\n",
+    "    \n",
+    "        if len(self.waiting[index]) > 0:\n",
+    "            waiting_array[0] = 0\n",
+    "        \n",
+    "    def tick_in(self):\n",
+    "        # Get all new cars that come in from intersection\n",
+    "        for i in range(4):\n",
+    "            for j in range(len(self.inlets[i])):\n",
+    "                if self.inlets[i][j] != None:\n",
+    "                    new_cars = self.inlets[i][j].tick(self, i, j)\n",
+    "                    for k in range(len(new_cars)):\n",
+    "                        # Figure out which way they car will go\n",
+    "                        LEFT_CHANCE = 0.33\n",
+    "                        STRAIGHT_CHANCE = 0.34\n",
+    "                        RIGHT_CHANCE = 0.33\n",
+    "\n",
+    "                        left_chance     = LEFT_CHANCE\n",
+    "                        straight_chance = STRAIGHT_CHANCE\n",
+    "                        right_chance    = RIGHT_CHANCE\n",
+    "                        total_weight = left_chance + straight_chance + right_chance\n",
+    "\n",
+    "                        left_chance /= total_weight\n",
+    "                        straight_chance /= total_weight\n",
+    "                        right_chance /= total_weight\n",
+    "\n",
+    "                        decision = random.random()\n",
+    "                        if decision < left_chance:\n",
+    "                            new_cars[k].set_desired_direction((i + 1) % 4) # Turn Left\n",
+    "                        elif decision < left_chance + straight_chance:\n",
+    "                            new_cars[k].set_desired_direction((i - 2) % 4) # Go Straight\n",
+    "                        else:\n",
+    "                            new_cars[k].set_desired_direction((i - 1) % 4) # Turn Right\n",
+    "\n",
+    "                        assert(len(new_cars) <= 1)\n",
+    "                        self.waiting[i][j] = new_cars[k]\n",
+    "        \n",
+    "bi = BigIntersection()\n",
+    "in_big_roads = []\n",
+    "out_big_roads = []\n",
+    "\n",
+    "LANES_PER_ROAD = 2\n",
+    "\n",
+    "for i in range(4):\n",
+    "    in_big_roads.append(OneWayRoad(LANES_PER_ROAD, 50, 5))\n",
+    "    out_big_roads.append(OneWayRoad(LANES_PER_ROAD, 50, 5))\n",
+    "    for l in range(LANES_PER_ROAD):\n",
+    "        bi.set_inlet(i, LaneInlet(in_big_roads[i].lanes[l]))\n",
+    "        bi.set_outlet(i, LaneOutlet(out_big_roads[i].lanes[l]))\n",
+    "        \n",
+    "bi.tick_in()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0ffefe6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -770,14 +896,12 @@
     "    return (1 - t) * a + t * b\n",
     "\n",
     "class Grid:\n",
-    "    def __init__(self, ai_function, x_grid, y_grid, length, max_speed, in_rate, initial_density, seed=42):\n",
+    "    def __init__(self, ai_function, x_grid, y_grid, length, max_speed, in_rate, initial_density):\n",
     "        self.x_grid = x_grid\n",
     "        self.y_grid = y_grid\n",
     "        self.max_speed = max_speed\n",
     "        self.grid = np.zeros(shape=(x_grid, y_grid), dtype=object)\n",
     "        self.lanes = []\n",
-    "        np.random.seed(seed)\n",
-    "        random.seed(seed)\n",
     "        \n",
     "        for x in range(x_grid):\n",
     "            for y in range(y_grid):\n",
@@ -899,7 +1023,9 @@
     "                else:\n",
     "                    # Draw horizontal line\n",
     "                    plt.plot([x,x],[y-0.05,y+0.05], color=\"red\", linewidth=2.5)\n",
-    "                    plt.plot([x+0.05, x-0.05],[y, y], color=\"lime\", linewidth=2.5)"
+    "                    plt.plot([x+0.05, x-0.05],[y, y], color=\"lime\", linewidth=2.5)\n",
+    "#                 plt.scatter(x,y,color=[(c,0.0,0.0)])\n",
+    "#                 ax.plot(xs, ys, c=(c,0.0,0.0), linewidth=4.0)\n"
    ]
   },
   {
@@ -912,8 +1038,8 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "class TrafficSimulation:\n",
-    "    def __init__(self, ai_function, grid_size=21, lane_length=10, max_speed=5, in_rate=0.2, initial_density=0.05, seed=42):\n",
-    "        self.grid = Grid(ai_function, grid_size, grid_size, lane_length, max_speed, in_rate, initial_density, seed=seed)\n",
+    "    def __init__(self, ai_function, grid_size=21, lane_length=10, max_speed=5, in_rate=0.2, initial_density=0.01):\n",
+    "        self.grid = Grid(ai_function, grid_size, grid_size, lane_length, max_speed, in_rate, initial_density)\n",
     "        \n",
     "    def run_simulation(self, ticks):\n",
     "        total_cars_stopped = 0\n",
@@ -937,6 +1063,7 @@
     "            self.grid.draw(ax)\n",
     "            plt.savefig(f\"{folder}/frame{str(i).zfill(3)}.png\", pad_inches=0)\n",
     "            self.run_simulation(1)\n",
+    "\n",
     "    \n",
     "def my_ai(inputs):\n",
     "    if inputs[-1] == NORTH_SOUTH_GREEN:\n",
