Adds carbon emissions fitness variable

--- a/simulation/ExampleUsage.ipynb
+++ b/simulation/ExampleUsage.ipynb
@@ -2,18 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "1f9b9f88",
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Total Waiting Cars 107389\n"
+      "/home/gebkab/Traffic/TrafficLightAI/simulation/simulation.py:8: UserWarning: Newer version of simulation, simulation_numba is available\n",
+      "  warnings.warn('Newer version of simulation, simulation_numba is available')\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "107389"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     },
     {
      "data": {
@@ -43,9 +54,10 @@
     "        return NORTH_SOUTH_GREEN, random.randint(1,30)\n",
     "\n",
     "sim = TrafficSimulation(my_ai, grid_size_x=8, grid_size_y=6, lane_length=10, max_speed=5, in_rate=0.2, initial_density=0.1)\n",
-    "car_waiting_ticks = sim.run_simulation(1000)\n",
+    "results = sim.run_simulation(1000)\n",
     "sim.render_frame(\"Small.png\")\n",
-    "print(f\"Total Waiting Cars {car_waiting_ticks}\")"
+    "# print(f\"Total Waiting Cars {car_waiting_ticks}\")\n",
+    "results"
    ]
   },
   {
